generator client {
  provider = "prisma-client-js"
  output   = "../generated/prisma"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "./prisma/dbml"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// schema to store diff college name eg: NMAMIT ,NMIT ... etc
model College {
  id                         String                    @id @default(dbgenerated("uuid_generate_v4()")) @map("college_id") @db.Uuid
  name                       String                    @unique @map("college_name") @db.VarChar(150)
  code                       String                    @unique @map("college_code") @db.VarChar(20)
  logoUrl                    String?                   @map("logo_url")
  academic_years             academic_years[]
  courses                    Course[]
  department_elective_groups DepartmentElectiveGroup[]
  departments                Department[]
  students                   Student[]
  teachers                   Teacher[]

  @@map("colleges")
}

//schema for  storing different department in each college 
model Department {
  id                       String                    @id @default(dbgenerated("uuid_generate_v4()")) @map("department_id") @db.Uuid
  college_id               String                    @db.Uuid
  name                     String                    @map("department_name") @db.VarChar(100)
  code                     String?                   @map("department_code") @db.VarChar(10)
  courses                  Course[]
  departmentElectiveGroups DepartmentElectiveGroup[]
  colleges                 College                   @relation(fields: [college_id], references: [id], onDelete: Cascade, onUpdate: NoAction)
  openElectiveRestrictions OpenElectiveRestriction[]
  sections                 sections[]
  students                 Student[]
  teachers                 Teacher[]

  @@unique([college_id, code])
  @@unique([college_id, name])
  @@map("departments")
}

//schema to store diff types of user( students,teacher,admin ...etc )
model User {
  id           String               @id @default(dbgenerated("uuid_generate_v4()")) @map("user_id") @db.Uuid
  username     String               @unique @db.VarChar(100)
  email        String?              @db.VarChar(150)
  passwordHash String               @map("password_hash")
  name         String               @db.VarChar(100)
  phone        String?              @db.VarChar(15)
  photoUrl     String?              @map("photo_url")
  createdAt    DateTime?            @default(now()) @map("created_at") @db.Timestamp(6)
  admin        Admin?
  reportViewer ReportViewer?
  student      Student?
  teacher      Teacher?
  userRoles    UserRoleAssignment[]

  @@map("users")
}

model UserRoleAssignment {
  userId String    @map("user_id") @db.Uuid
  role   user_role
  user   User      @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@id([userId, role])
  @@map("user_roles")
}

model Student {
  id                String              @id @default(dbgenerated("uuid_generate_v4()")) @map("student_id") @db.Uuid
  userId            String              @unique @map("user_id") @db.Uuid
  college_id        String              @db.Uuid
  department_id     String?             @db.Uuid
  section_id        String?             @db.Uuid
  usn               String              @unique @db.VarChar(20)
  semester          Int?
  batchYear         Int                 @map("batch_year")
  attendanceRecords AttendanceRecord[]
  enrollments       StudentEnrollment[]
  colleges          College             @relation(fields: [college_id], references: [id], onUpdate: NoAction)
  departments       Department?         @relation(fields: [department_id], references: [id], onUpdate: NoAction)
  sections          sections?           @relation(fields: [section_id], references: [section_id], onUpdate: NoAction)
  user              User                @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@map("students")
}

model Teacher {
  id              String           @id @default(dbgenerated("uuid_generate_v4()")) @map("teacher_id") @db.Uuid
  userId          String           @unique @map("user_id") @db.Uuid
  college_id      String           @db.Uuid
  departmentId    String?          @map("department_id") @db.Uuid
  attendances     Attendance[]
  courseOfferings CourseOffering[]
  colleges        College          @relation(fields: [college_id], references: [id], onDelete: Cascade, onUpdate: NoAction)
  department      Department?      @relation(fields: [departmentId], references: [id], onUpdate: NoAction)
  user            User             @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@map("teachers")
}

model Course {
  id                         String                      @id @default(dbgenerated("uuid_generate_v4()")) @map("course_id") @db.Uuid
  college_id                 String                      @db.Uuid
  code                       String                      @map("course_code") @db.VarChar(20)
  name                       String                      @map("course_name") @db.VarChar(100)
  departmentId               String?                     @map("department_id") @db.Uuid
  type                       course_type?                @map("course_type")
  hasTheoryComponent         Boolean                     @default(true) @map("has_theory_component")
  hasLabComponent            Boolean                     @default(false) @map("has_lab_component")
  courseElectiveGroupMembers CourseElectiveGroupMember[]
  courseOfferings            CourseOffering[]
  colleges                   College                     @relation(fields: [college_id], references: [id], onDelete: Cascade, onUpdate: NoAction)
  department                 Department?                 @relation(fields: [departmentId], references: [id], onUpdate: NoAction)
  openElectiveRestrictions   OpenElectiveRestriction[]

  @@unique([college_id, code])
  @@map("courses")
}

model DepartmentElectiveGroup {
  id                         String                      @id @default(dbgenerated("uuid_generate_v4()")) @map("group_id") @db.Uuid
  college_id                 String                      @db.Uuid
  name                       String                      @map("group_name") @db.VarChar(150)
  departmentId               String                      @map("department_id") @db.Uuid
  semester                   Int
  batchYear                  Int                         @map("batch_year")
  courseElectiveGroupMembers CourseElectiveGroupMember[]
  colleges                   College                     @relation(fields: [college_id], references: [id], onDelete: Cascade, onUpdate: NoAction)
  department                 Department                  @relation(fields: [departmentId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@unique([college_id, name, departmentId, semester, batchYear])
  @@map("department_elective_groups")
}

model CourseElectiveGroupMember {
  groupId  String                  @map("group_id") @db.Uuid
  courseId String                  @map("course_id") @db.Uuid
  course   Course                  @relation(fields: [courseId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  group    DepartmentElectiveGroup @relation(fields: [groupId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@id([groupId, courseId])
  @@map("course_elective_group_members")
}

model OpenElectiveRestriction {
  id                     String     @id @default(dbgenerated("uuid_generate_v4()")) @map("restriction_id") @db.Uuid
  courseId               String?    @map("course_id") @db.Uuid
  restrictedDepartmentId String     @map("restricted_department_id") @db.Uuid
  course                 Course?    @relation(fields: [courseId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  restrictedDepartment   Department @relation(fields: [restrictedDepartmentId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@unique([courseId, restrictedDepartmentId])
  @@map("open_elective_restrictions")
}

model CourseOffering {
  id             String              @id @default(dbgenerated("uuid_generate_v4()")) @map("offering_id") @db.Uuid
  courseId       String              @map("course_id") @db.Uuid
  teacherId      String?             @map("teacher_id") @db.Uuid
  section_id     String?             @db.Uuid
  year_id        String?             @db.Uuid
  semester       Int?
  attendances    Attendance[]
  course         Course              @relation(fields: [courseId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  sections       sections?           @relation(fields: [section_id], references: [section_id], onDelete: Cascade, onUpdate: NoAction)
  teacher        Teacher?            @relation(fields: [teacherId], references: [id], onUpdate: NoAction)
  academic_years academic_years?     @relation(fields: [year_id], references: [year_id], onDelete: Cascade, onUpdate: NoAction)
  enrollments    StudentEnrollment[]
  testComponents TestComponent[]

  @@map("course_offerings")
}



model StudentEnrollment {
  id             String          @id @default(dbgenerated("uuid_generate_v4()")) @map("enrollment_id") @db.Uuid
  studentId      String?         @map("student_id") @db.Uuid
  offeringId     String?         @map("offering_id") @db.Uuid
  attemptNumber  Int?            @default(1) @map("attempt_number")
  year_id        String?         @db.Uuid
  offering       CourseOffering? @relation(fields: [offeringId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  student        Student?        @relation(fields: [studentId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  academic_years academic_years? @relation(fields: [year_id], references: [year_id], onDelete: Cascade, onUpdate: NoAction)

  studentMarks   StudentMark[]

  @@map("student_enrollments")
}

model Attendance {
  id                String             @id @default(dbgenerated("uuid_generate_v4()")) @map("attendance_id") @db.Uuid
  offeringId        String?            @map("offering_id") @db.Uuid
  teacherId         String?            @map("teacher_id") @db.Uuid
  classDate         DateTime           @map("class_date") @db.Date
  periodNumber      Int?               @map("period_number")
  syllabusCovered   String?            @map("syllabus_covered")
  status            String?            @default("held") @db.VarChar(20)
  offering          CourseOffering?    @relation(fields: [offeringId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  teacher           Teacher?           @relation(fields: [teacherId], references: [id], onUpdate: NoAction)
  attendanceRecords AttendanceRecord[]

  @@map("attendance")
}

model AttendanceRecord {
  id           String             @id @default(dbgenerated("uuid_generate_v4()")) @map("record_id") @db.Uuid
  attendanceId String?            @map("attendance_id") @db.Uuid
  studentId    String?            @map("student_id") @db.Uuid
  status       attendance_status?
  attendance   Attendance?        @relation(fields: [attendanceId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  student      Student?           @relation(fields: [studentId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@map("attendance_records")
}




model Admin {
  id     String @id @default(dbgenerated("uuid_generate_v4()")) @map("admin_id") @db.Uuid
  userId String @unique @map("user_id") @db.Uuid
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@map("admins")
}

model ReportViewer {
  id     String @id @default(dbgenerated("uuid_generate_v4()")) @map("viewer_id") @db.Uuid
  userId String @unique @map("user_id") @db.Uuid
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@map("report_viewers")
}

model academic_years {
  year_id             String              @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  college_id          String              @db.Uuid
  year_name           String              @db.VarChar(10)
  start_date          DateTime?           @db.Date
  end_date            DateTime?           @db.Date
  is_active           Boolean?            @default(false)
  colleges            College             @relation(fields: [college_id], references: [id], onDelete: Cascade, onUpdate: NoAction)
  course_offerings    CourseOffering[]
  student_enrollments StudentEnrollment[]

  @@unique([college_id, year_name])
}

model sections {
  section_id       String           @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  department_id    String           @db.Uuid
  section_name     String           @db.VarChar(10)
  course_offerings CourseOffering[]
  departments      Department       @relation(fields: [department_id], references: [id], onDelete: Cascade, onUpdate: NoAction)
  students         Student[]

  @@unique([department_id, section_name])
}

model TestComponent {
  id               String          @id @default(dbgenerated("uuid_generate_v4()")) @map("test_component_id") @db.Uuid
  courseOfferingId String          @map("course_offering_id") @db.Uuid
  name             String          @map("test_name") @db.VarChar(50)   // e.g., "MSE1", "Project"
  maxMarks         Int             @map("max_marks")
  weightage        Int             @default(100) @map("weightage")     // default percentage
  courseOffering   CourseOffering  @relation(fields: [courseOfferingId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  studentMarks     StudentMark[]
  type             test_type        @default(theory) 
  @@map("test_components")
}

model StudentMark {
  id              String             @id @default(dbgenerated("uuid_generate_v4()")) @map("student_mark_id") @db.Uuid
  enrollmentId    String             @map("enrollment_id") @db.Uuid
  testComponentId String             @map("test_component_id") @db.Uuid
  marksObtained   Int?               @map("marks_obtained")
  enrollment      StudentEnrollment  @relation(fields: [enrollmentId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  testComponent   TestComponent      @relation(fields: [testComponentId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@unique([enrollmentId, testComponentId]) // one student can have only one mark per test
  @@map("student_marks")
}


// Enums
enum test_type {
theory
lab
}
enum attendance_status {
  present
  absent
  not
}

enum course_type {
  core
  department_elective
  open_elective
}

enum user_role {
  student
  teacher
  admin
  report_viewer
}
